# dune-daq-codec

./: CMakeLists.txt  README.md
cmake/: dune_daq_codecConfig.cmake.in
data/channelmaps/: PROVENANCE.md
data/channelmaps/pd2vd/: PD2VDTPCChannelMap_v1.txt  PD2VDTPCChannelMap_v2.txt  PD2VDTopTPCChannelMap_v1.txt  PD2VDTopTPCChannelMap_v2.txt
docs/: channel-map-schemas.md  daq-hdf5-layout.md  format-coverage.md  format-descriptor-adr.md  version-robustness.md  wibeth-format.md
dune_daq_codec/: ChannelMap.hpp  Decode.cpp  Decode.hpp  FormatDescriptor.hpp  OnlineOfflineChannelMap.hpp  OnlineOfflineChannels.cpp  OnlineOfflineChannels.hpp
test/: CMakeLists.txt  test_channel_map.cpp  test_channel_map_golden.cpp  test_channel_map_vendored.cpp  test_decode.cpp  test_golden.cpp  test_invariants.cpp
test/fixtures/: chanmap_golden_cold.txt  chanmap_golden_warm.txt
tools/: README.md  gen_golden_chanmap.cpp  gen_golden_wibeth.cpp
